--- a/theme.css
+++ b/theme.css
@@ -28,10 +28,10 @@
   --app-button-min: hsl(39,100%,63%);
   --app-button-max: hsl(143,100%,40%);
   --app-button-close: hsl(1,100%,68%);
-  --accent-hue: 0;
-  --accent-saturation: 0%;
-  --accent-lightness: 0%;
-  --accent-hsl: var(--accent-hue),calc(var(--accent-saturation) * var(--saturation-factor)),var(--accent-lightness);
+  --accent-hue: 321;
+  --accent-saturation: 100%;
+  --accent-lightness: 50%;
+  --accent-hsl: var(--accent-hue),calc(var(--accent-saturation) * var(--saturation-factor)),var(--accent-lightness),80%;
   --accent-text-color: hsl(0,0%,100%);
   --alert-hue: 0;
   --alert-saturation: 85%;
