--- a/nitroaddon.css
+++ b/nitroaddon.css
@@ -87,7 +87,7 @@
 }
 .theme-dark .container_f7e03d,
 .theme-light .container_f7e03d {
-  background: var(--bg-overlay-4, var(--background-secondary));
+  background: var(--bg-overlay-3, var(--background-secondary));
 }
 .theme-dark .wrapper_fea3ef,
 .theme-light .wrapper_fea3ef {
@@ -137,13 +137,10 @@
 .theme-light .wrapper_d8bfb3 .link_d8bfb3 {
   background: transparent;
 }
-.theme-dark .wrapper_d8bfb3:hover,
-.theme-light .wrapper_d8bfb3:hover {
-  background: var(--bg-overlay-hover, var(--background-primary));
-}
+
 .theme-dark .wrapper_d8bfb3.modeSelected_d8bfb3,
 .theme-light .wrapper_d8bfb3.modeSelected_d8bfb3 {
-  background: var(--bg-overlay-selected, var(--background-primary));
+  background: var(--bg-overlay-4);
 }
 .theme-dark .nowPlayingColumn_c2739c,
 .theme-light .nowPlayingColumn_c2739c {
@@ -196,7 +193,7 @@
 }
 .theme-dark .container_b2ca13,
 .theme-light .container_b2ca13 {
-  background: var(--bg-overlay-4, var(--background-tertiary)) !important;
+  background: var(--bg-overlay-3, var(--background-tertiary)) !important;
 }
 .theme-dark .chat_a7d72e,
 .theme-dark .chatContent_a7d72e,
@@ -411,4 +408,13 @@
 .theme-dark .container_fc4f04.themed_fc4f04,
 .theme-light .container_fc4f04.themed_fc4f04 {
     background: var(--bg-overlay-2);
+}
+
+#vc-spotify-player .vc-spotify-play,
+#vc-spotify-player .vc-spotify-pause {
+    background: var(--bg-overlay-5);
+}
+.theme-dark .slider_c7a159 .bar_c7a159 .barFill_c7a159,
+.theme-light .slider_c7a159 .bar_c7a159 .barFill_c7a159 {
+  background: var(--bg-overlay-6);
 }
