--- a/theme1.css
+++ b/theme1.css
@@ -1050,12 +1050,10 @@ html:not(.app-focused) .typeWindows_a934d8 .winButton_a934d8.winButtonMinMax_a93
 }
 
 .container_b2ca13 {
-  width: 100%;
   height: 44px !important;
   margin-bottom: 0 !important;
   background: var(--status-picker-color) !important;
   border-radius: var(--sidebar-panel-radius-small);
-  box-sizing: border-box;
 }
 .container_b2ca13 .avatarWrapper_b2ca13 {
   min-width: 0 !important;
@@ -1832,7 +1830,7 @@ html:not(.app-focused) .typeWindows_a934d8 .winButton_a934d8.winButtonMinMax_a93
   background-color: var(--card-color-hover);
 }
 .container_c64476 .thumbnail_c64476 {
-  border-radius: calc(var(--card-radius-big) / 1.6);
+  border-radius: 50%;
 }
 
 /*
@@ -1901,8 +1899,6 @@ html:not(.app-focused) .typeWindows_a934d8 .winButton_a934d8.winButtonMinMax_a93
   border-radius: 0;
 }
 .searchResult_ddc613 .wrapper_f9f2ca {
-  margin: 0 8px 0 60px !important;
-  padding: 12px !important;
   border-radius: var(--message-radius);
 }
 .searchResult_ddc613 .wrapper_f9f2ca:before, .searchResult_ddc613 .wrapper_f9f2ca:after {
@@ -2638,9 +2634,9 @@ html:not(.app-focused) .typeWindows_a934d8 .winButton_a934d8.winButtonMinMax_a93
  *  BETTERDISCORD PLUGIN -> ImageUtilities
  *
  */
-.menu_d90b3d .item_d90b3d {
+
   /* SUBMENU WITH ARROW */
-}
+
 .menu_d90b3d #message-imageutilities-copy-link.item_d90b3d:after {
   -webkit-mask-image: url(https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/files/icons/outline/content_copy.svg);
 }
@@ -13146,10 +13142,10 @@ body:active .recentMentionsPopout_ddb5b4:not(:active) {
   overflow: hidden;
 }
 .container_eedf95 .option_b0286e:after {
-  background: linear-gradient(90deg, transparent, var(--popout-color) 80%);
+  background: transparent;
 }
 .container_eedf95 .option_b0286e:hover:after {
-  background: linear-gradient(90deg, transparent, var(--menu-item-hover) 50%);
+  background: transparent;
 }
 .container_eedf95 [aria-selected=true].option_b0286e {
   background: var(--menu-item-select) !important;
@@ -13300,6 +13296,9 @@ body:active .menu_ad5fac:not(:active) {
   padding: 0;
 }
 
+.menu_d90b3d .item_d90b3d {
+  border-radius: var(--card-radius-big);
+}
 /* STATUS PICKER -> NEW */
 /*
  *
@@ -13715,8 +13714,8 @@ body:active .container_e664f3:not(:active) {
   gap: 6px;
   padding: 0 12px 0 6px;
   background-color: transparent;
-  border-radius: 8px;
-  border: 1px solid var(--card-border-color);
+  border-radius: var(--card-radius-big);
+  border: 0.1em solid var(--card-border-color);
 }
 .role_f9575e > :first-child, .role_c6b11b > :first-child {
   margin-left: 0;
