--- a/theme.css
+++ b/theme.css
@@ -1,7 +1,7 @@
 /*Inspired by MaterialDiscord theme from CapnKitten#3192*/
 /*Source: https://github.com/CapnKitten/BetterDiscord/tree/master/Themes/Material-Discord */
 
-/* Version 5.5.1.2 */
+/* Version 5.5.1.2 (Out of date) */
 
 /*
 *
