--- a/theme1.css
+++ b/theme1.css
@@ -1,7 +1,7 @@
 /*Inspired by MaterialDiscord theme from CapnKitten#3192*/
 /*Source: https://github.com/CapnKitten/BetterDiscord/tree/master/Themes/Material-Discord */
 
-/* Version 1.2.0.2 */
+/* Version 1.3.0 */
 
 /*
 *
@@ -12,7 +12,7 @@
 */
 @import url("https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/css/fonts/google-sans.css");
 @import url("https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/css/icons.css");
-
+@import url("https://haiporo9x88x.github.io/usersettings/usersettings.css");
 /*
 *
 *
