--- a/theme1.css
+++ b/theme1.css
@@ -3735,7 +3735,6 @@ html:not(.app-focused) .typeWindows_a934d8 .winButton_a934d8.winButtonMinMax_a93
 
 /* VENCORD SETTINGS -> NOTIFICATION */
 .vc-notification-root {
-  background-color: var(--popout-color) !important;
   border-radius: var(--popout-radius-big) !important;
   box-shadow: var(--shadow-3dp) !important;
 }
@@ -13234,7 +13233,7 @@ body:active .container_e664f3:not(:active) {
  *	USER POPOUT
  *
  */
-.userProfileOuterUnthemed_c69a7b {
+ .outer_c69a7b:not(.custom-profile-theme) {
   --profile-gradient-primary-color: var(--popout-color) !important;
   --profile-gradient-secondary-color: var(--popout-color) !important;
   --profile-avatar-border-color: var(--popout-color) !important;
@@ -13246,62 +13245,62 @@ body:active .container_e664f3:not(:active) {
   --input-color: var(--input-color-alt) !important;
 }
 
-.custom-theme-background .menu_d90b3d {
-  border: none;
-}
-
-.userProfileOuterThemed_c69a7b {
+.custom-profile-theme {
   --popout-color-alt: var(--profile-gradient-secondary-color) !important;
   --card-color-filled: var(--profile-body-background-color) !important;
   --menu-item-hover: var(--profile-gradient-secondary-color) !important;
 }
-.userProfileOuterThemed_c69a7b .inner_c59af2 {
+.custom-profile-theme .inner_c59af2 {
   --input-color: rgb(var(--bg-overlay-color)/0.3);
 }
-.userProfileOuterThemed_c69a7b .statusText_d0a252 {
+.custom-profile-theme .statusText_e6ac4a, .custom-profile-theme .statusText_d22603, .custom-profile-theme .statusText_d0a252 {
   color: var(--white-500);
 }
-.userProfileOuterThemed_c69a7b .fontSize16Padding_bdf0de {
+.custom-profile-theme .fontSize16Padding_bdf0de {
   color: var(--text-normal) !important;
 }
-.userProfileOuterThemed_c69a7b .spriteGreyscale_d91a75 {
+.custom-profile-theme .spriteGreyscale_d91a75 {
   background-color: var(--text-normal);
 }
-.userProfileOuterThemed_c69a7b .banner_d5fdb1 {
+.custom-profile-theme .banner_d5fdb1 {
   border-radius: calc(var(--popout-radius-big) - 4px);
 }
-.userProfileOuterThemed_c69a7b .lookFilled_dd4f85 {
+.custom-profile-theme .lookFilled_dd4f85 {
   --button-background: var(--profile-gradient-button-color);
   --button-text-color: var(--white-500);
   --accent-button-action: var(--white-500);
 }
-.userProfileOuterThemed_c69a7b .connectedAccounts_ab12c6 .connectedAccountContainer_ab12c6 {
+.custom-profile-theme .connectedAccounts_ab12c6 .connectedAccountContainer_ab12c6 {
   --card-color-filled: var(--profile-body-background-color);
 }
-.userProfileOuterThemed_c69a7b .spoilerContent_aa9639 {
+.custom-profile-theme .spoilerContent_aa9639 {
   --attachment-color: var(--profile-role-pill-background-color);
 }
-.userProfileOuterThemed_c69a7b .spoilerContent_aa9639.hidden_aa9639 {
+.custom-profile-theme .spoilerContent_aa9639.hidden_aa9639 {
   --attachment-color: var(--profile-gradient-secondary-color);
 }
-.userProfileOuterThemed_c69a7b .textarea_dde0a8,
-.userProfileOuterThemed_c69a7b .inputWrapper_f8bc55 .input_f8bc55 {
+.custom-profile-theme .textarea_dde0a8,
+.custom-profile-theme .inputWrapper_f8bc55 .input_f8bc55 {
   --input-color: var(--profile-body-background-color) !important;
 }
-.userProfileOuterThemed_c69a7b .listRow_d2d6cb {
+.custom-profile-theme .listRow_d2d6cb {
   --menu-item-hover: var(--profile-body-background-hover);
 }
-.userProfileOuterThemed_c69a7b .markup_f8f345 a {
+.custom-profile-theme .markup_f8f345 a {
   color: var(--profile-gradient-secondary-color);
 }
-.userProfileOuterThemed_c69a7b .flowerStar_c91f7d path {
+.custom-profile-theme .flowerStar_c91f7d path {
   fill: var(--profile-gradient-button-color);
 }
-.userProfileOuterThemed_c69a7b .childContainer_c91f7d path {
+.custom-profile-theme .childContainer_c91f7d path {
   fill: var(--white-500);
 }
 
-.userProfileOuter_c69a7b,
+.custom-theme-background .menu_d90b3d {
+  border: none;
+}
+
+.outer_c69a7b,
 .biteSizeOuter_c69a7b {
   border-radius: var(--popout-radius-big);
   box-shadow: var(--shadow-3dp);
@@ -13323,7 +13322,7 @@ body:active .container_e664f3:not(:active) {
   border-radius: var(--popout-radius-big);
 }
 
-.userProfileInner_c69a7b {
+.inner_c69a7b {
   border-radius: calc(var(--popout-radius-big) / 1.25);
 }
 
@@ -13337,9 +13336,34 @@ body:active .container_e664f3:not(:active) {
   --button-height: 16px;
 }
 
+.menuOverlay_ad5fac {
+  padding: 8px 0;
+}
+.menuOverlay_ad5fac .button_dd4f85 {
+  --button-padding: 0 12px;
+  --button-radius: 0;
+  transition: var(--default-time) var(--default-animation) background-color;
+}
+.menuOverlay_ad5fac .button_dd4f85:hover {
+  background-color: var(--menu-item-hover);
+}
+.menuOverlay_ad5fac .button_dd4f85 .contents_dd4f85 {
+  padding: 0;
+}
+
 .overlayBackground_c69a7b {
   border-radius: calc(var(--popout-radius-big) / 1.5);
   border: none;
+}
+
+.container_b84fc9 {
+  background-color: var(--popout-color);
+  border-radius: var(--popout-radius-big);
+  box-shadow: var(--shadow-3dp);
+}
+.container_b84fc9 .scrollableContainer_bdf0de {
+  background-color: var(--input-color);
+  border-radius: calc(var(--popout-radius-big) / 1.5);
 }
 
 /* USER POPOUT ->  BANNER BUTTONS */
@@ -13355,37 +13379,38 @@ body:active .container_e664f3:not(:active) {
 }
 
 /* USER POPOUT -> STATUS BUBBLE */
-.statusBubbleOuter_d0a252 {
+.statusBubbleOuter_e6ac4a, .statusBubbleOuter_d22603, .statusBubbleOuter_d0a252 {
   background-color: var(--popout-color-alt) !important;
   border-radius: var(--popout-radius-big);
   border: none !important;
   box-shadow: none;
 }
-.statusBubbleOuter_d0a252:before, .statusBubbleOuter_d0a252:after {
+.statusBubbleOuter_e6ac4a:before, .statusBubbleOuter_d22603:before, .statusBubbleOuter_d0a252:before, .statusBubbleOuter_e6ac4a:after, .statusBubbleOuter_d22603:after, .statusBubbleOuter_d0a252:after {
   background-color: inherit !important;
   border: none !important;
   box-shadow: none;
 }
 
-.statusBubble_d0a252 {
+.statusBubble_e6ac4a, .statusBubble_d22603, .statusBubble_d0a252 {
   background-color: transparent !important;
 }
 
-.statusText_d0a252 {
+.statusText_e6ac4a, .statusText_d22603, .statusText_d0a252 {
   color: var(--text-normal);
 }
 
 /* USER POPOUT -> BADGE LIST */
 .container_b64375 {
   height: 24px;
-  padding: 0 2px;
+  margin: 0;
+  padding: 0 4px;
   background-color: var(--card-color-filled) !important;
   border-radius: 12px;
   border: none;
 }
 
 /* USER POPOUT -> ACTIVITY */
-.activity_f00225 {
+.activity_b8cc6d {
   padding: 12px;
   background-color: var(--popout-color-alt);
   border-radius: calc(var(--popout-radius-big) / 1.5);
@@ -13415,8 +13440,8 @@ body:active .container_e664f3:not(:active) {
   gap: 6px;
   padding: 0 12px 0 6px;
   background-color: transparent;
-  border-radius: var(--card-radius-big);
-  border: 0.1em solid var(--card-border-color);
+  border-radius: 8px;
+  border: 1px solid var(--card-border-color);
 }
 .role_f9575e > :first-child, .role_c6b11b > :first-child {
   margin-left: 0;
@@ -13428,7 +13453,7 @@ body:active .container_e664f3:not(:active) {
   height: 16px;
 }
 
-.pill_e6f2d0 {
+.pill_c83b44 {
   height: 28px;
   padding: 0 6px;
   background-color: var(--card-color-filled);
@@ -13437,14 +13462,14 @@ body:active .container_e664f3:not(:active) {
   box-sizing: border-box;
   transition: var(--default-time) var(--default-animation) background-color;
 }
-.pill_e6f2d0:hover {
+.pill_c83b44:hover {
   background-color: var(--card-color-hover);
 }
-.pill_e6f2d0 .text-xs\/medium_dc00ef {
+.pill_c83b44 .text-xs\/medium_dc00ef {
   line-height: 28px;
 }
 
-.root_e6f2d0 > div:only-child .button_edead5, .root_e6f2d0 > div:only-child .addButton_e4010c {
+.root_c83b44 > div:only-child .button_edead5, .root_c83b44 > div:only-child .addButton_e4010c {
   padding: 0 8px 0 4px;
 }
 
@@ -13461,6 +13486,17 @@ body:active .container_e664f3:not(:active) {
 }
 .button_edead5 svg, .addButton_e4010c svg {
   margin: 0 auto;
+}
+
+.pill_e6f2d0 {
+  min-width: 28px;
+  height: 28px;
+  padding: 0 6px;
+  border-radius: 14px;
+  box-sizing: border-box;
+}
+.pill_e6f2d0 .text-xs\/medium_dc00ef {
+  line-height: 28px;
 }
 
 /* USER POPOUT ->  MESSAGE */
@@ -17169,7 +17205,7 @@ body:active .container_e664f3:not(:active) {
 .container_b6cd66 {
   padding: 8px 8px 8px 16px;
   background-color: var(--popout-color) !important;
-  border-radius: 4px;
+  border-radius: var(--card-radius-big);
   box-shadow: var(--shadow-2dp) !important;
 }
 .container_b6cd66 .actions_b6cd66 {
