--- a/theme1.css
+++ b/theme1.css
@@ -1,7 +1,7 @@
 /*Inspired by MaterialDiscord theme from CapnKitten#3192*/
 /*Source: https://github.com/CapnKitten/BetterDiscord/tree/master/Themes/Material-Discord */
 
-/* Version 1.3.2 */
+/* Version 1.3.3 */
 
 /*
 *
@@ -13253,7 +13253,7 @@ body:active .container_e664f3:not(:active) {
 .custom-profile-theme .inner_c59af2 {
   --input-color: rgb(var(--bg-overlay-color)/0.3);
 }
-.custom-profile-theme .statusText_e6ac4a, .custom-profile-theme .statusText_d22603, .custom-profile-theme .statusText_d0a252 {
+.custom-profile-theme .statusText_a82ccc, .custom-profile-theme .statusText_a82ccc, .custom-profile-theme .statusText_af9888 {
   color: var(--white-500);
 }
 .custom-profile-theme .fontSize16Padding_bdf0de {
@@ -13379,23 +13379,23 @@ body:active .container_e664f3:not(:active) {
 }
 
 /* USER POPOUT -> STATUS BUBBLE */
-.statusBubbleOuter_e6ac4a, .statusBubbleOuter_d22603, .statusBubbleOuter_d0a252 {
+.statusBubbleOuter_a82ccc, .statusBubbleOuter_a82ccc, .statusBubbleOuter_af9888 {
   background-color: var(--popout-color-alt) !important;
   border-radius: var(--popout-radius-big);
   border: none !important;
   box-shadow: none;
 }
-.statusBubbleOuter_e6ac4a:before, .statusBubbleOuter_d22603:before, .statusBubbleOuter_d0a252:before, .statusBubbleOuter_e6ac4a:after, .statusBubbleOuter_d22603:after, .statusBubbleOuter_d0a252:after {
+.statusBubbleOuter_a82ccc:before, .statusBubbleOuter_a82ccc:before, .statusBubbleOuter_af9888:before, .statusBubbleOuter_a82ccc:after, .statusBubbleOuter_a82ccc:after, .statusBubbleOuter_af9888:after {
   background-color: inherit !important;
   border: none !important;
   box-shadow: none;
 }
 
-.statusBubble_e6ac4a, .statusBubble_d22603, .statusBubble_d0a252 {
+.statusBubble_a82ccc, .statusBubble_a82ccc, .statusBubble_af9888 {
   background-color: transparent !important;
 }
 
-.statusText_e6ac4a, .statusText_d22603, .statusText_d0a252 {
+.statusText_a82ccc, .statusText_a82ccc, .statusText_af9888 {
   color: var(--text-normal);
 }
 
@@ -13440,7 +13440,7 @@ body:active .container_e664f3:not(:active) {
   gap: 6px;
   padding: 0 12px 0 6px;
   background-color: transparent;
-  border-radius: 8px;
+  border-radius: var(--card-radius-big);
   border: 1px solid var(--card-border-color);
 }
 .role_f9575e > :first-child, .role_c6b11b > :first-child {
@@ -13453,7 +13453,7 @@ body:active .container_e664f3:not(:active) {
   height: 16px;
 }
 
-.pill_c83b44 {
+.pill_e6f2d0 {
   height: 28px;
   padding: 0 6px;
   background-color: var(--card-color-filled);
@@ -13462,14 +13462,14 @@ body:active .container_e664f3:not(:active) {
   box-sizing: border-box;
   transition: var(--default-time) var(--default-animation) background-color;
 }
-.pill_c83b44:hover {
+.pill_e6f2d0:hover {
   background-color: var(--card-color-hover);
 }
-.pill_c83b44 .text-xs\/medium_dc00ef {
+.pill_e6f2d0 .text-xs\/medium_dc00ef {
   line-height: 28px;
 }
 
-.root_c83b44 > div:only-child .button_edead5, .root_c83b44 > div:only-child .addButton_e4010c {
+.root_e6f2d0 > div:only-child .button_edead5, .root_e6f2d0 > div:only-child .addButton_e4010c {
   padding: 0 8px 0 4px;
 }
 
@@ -14076,13 +14076,13 @@ body:active .container_e664f3:not(:active) {
   display: none;
 }
 
-.card_b3f648 {
+.card_e73adb {
   background-color: var(--card-color-filled);
   border-radius: var(--card-radius-big);
   box-shadow: none !important;
 }
 
-.iconMask_b3f648 {
+.iconMask_e73adb {
   background-color: var(--card-color-filled) !important;
 }
 
