--- a/nitroaddon.css
+++ b/nitroaddon.css
@@ -14,8 +14,8 @@
   border-top-right-radius: var(--card-radius-big);
   border-bottom-left-radius: var(--card-radius-big);
 }
-.theme-dark .themed_e44302,
-.theme-light .themed_e44302 {
+.theme-dark .themed_fc4f04,
+.theme-light .themed_fc4f04 {
   background: var(--bg-overlay-2, var(--background-secondary)) !important;
 }
 .theme-dark .standardSidebarView_c25c6d,
@@ -150,17 +150,17 @@
 .theme-light .nowPlayingColumn_c2739c .container_bf550a {
   background: inherit;
 }
-.theme-dark .interactive_c0f6a6,
-.theme-light .interactive_c0f6a6 {
+.theme-dark .interactive_ac5d22,
+.theme-light .interactive_ac5d22 {
   background: var(--bg-overlay-2, var(--background-primary));
 }
-.theme-dark .interactive_c0f6a6:hover, .theme-dark .interactive_c0f6a6.active_c0f6a6,
-.theme-light .interactive_c0f6a6:hover,
-.theme-light .interactive_c0f6a6.active_c0f6a6 {
+.theme-dark .interactive_ac5d22:hover, .theme-dark .interactive_ac5d22.active_ac5d22,
+.theme-light .interactive_ac5d22:hover,
+.theme-light .interactive_ac5d22.active_ac5d22 {
   background: var(--bg-overlay-3, var(--background-primary));
 }
-.theme-dark .interactive_c0f6a6 .section_cd82a7,
-.theme-light .interactive_c0f6a6 .section_cd82a7 {
+.theme-dark .interactive_ac5d22 .section_cd82a7,
+.theme-light .interactive_ac5d22 .section_cd82a7 {
   background: var(--bg-overlay-4, var(--background-primary));
 }
 .theme-dark .sidebar_a4d4d9,
@@ -181,12 +181,12 @@
 }
 .theme-dark .container_adcaac,
 .theme-dark .activityPanel_a4d4d9,
-.theme-dark .listeningAlong_cfdc9f,
+.theme-dark .listeningAlong_d4626d,
 .theme-dark .container_6sXIoE,
 .theme-dark #vc-spotify-player,
 .theme-light .container_adcaac,
 .theme-light .activityPanel_a4d4d9,
-.theme-light .listeningAlong_cfdc9f,
+.theme-light .listeningAlong_d4626d,
 .theme-light .container_6sXIoE,
 .theme-light #vc-spotify-player {
   background: var(--bg-overlay-3, var(--background-tertiary)) !important;
@@ -209,57 +209,57 @@
 .theme-light .typing_d7ebeb {
   background: var(--bg-overlay-2, var(--background-secondary));
 }
-.theme-dark .wrapper_ec86aa,
-.theme-light .wrapper_ec86aa {
+.theme-dark .wrapper_f9f2ca,
+.theme-light .wrapper_f9f2ca {
   background: var(--bg-overlay-3, var(--background-secondary));
 }
-.theme-dark .wrapper_ec86aa:not(.groupStart_d5deea):before, .theme-dark .wrapper_ec86aa:not(.groupStart_d5deea):after,
-.theme-light .wrapper_ec86aa:not(.groupStart_d5deea):before,
-.theme-light .wrapper_ec86aa:not(.groupStart_d5deea):after {
+.theme-dark .wrapper_f9f2ca:not(.groupStart_d5deea):before, .theme-dark .wrapper_f9f2ca:not(.groupStart_d5deea):after,
+.theme-light .wrapper_f9f2ca:not(.groupStart_d5deea):before,
+.theme-light .wrapper_f9f2ca:not(.groupStart_d5deea):after {
   width: calc(var(--message-radius) / 3);
   height: calc(var(--message-radius) / 2);
   top: calc(var(--message-radius) / 2 * -1);
   background: var(--bg-overlay-3, var(--background-secondary));
   border: none;
 }
-.theme-dark .wrapper_ec86aa:hover,
-.theme-light .wrapper_ec86aa:hover {
+.theme-dark .wrapper_f9f2ca:hover,
+.theme-light .wrapper_f9f2ca:hover {
   background: var(--bg-overlay-4, var(--background-secondary)) !important;
 }
-.theme-dark .messageListItem_d5deea:hover + .messageListItem_d5deea .wrapper_ec86aa:not(.groupStart_d5deea):before, .theme-dark .messageListItem_d5deea:hover + .messageListItem_d5deea .wrapper_ec86aa:not(.groupStart_d5deea):after,
-.theme-light .messageListItem_d5deea:hover + .messageListItem_d5deea .wrapper_ec86aa:not(.groupStart_d5deea):before,
-.theme-light .messageListItem_d5deea:hover + .messageListItem_d5deea .wrapper_ec86aa:not(.groupStart_d5deea):after {
+.theme-dark .messageListItem_d5deea:hover + .messageListItem_d5deea .wrapper_f9f2ca:not(.groupStart_d5deea):before, .theme-dark .messageListItem_d5deea:hover + .messageListItem_d5deea .wrapper_f9f2ca:not(.groupStart_d5deea):after,
+.theme-light .messageListItem_d5deea:hover + .messageListItem_d5deea .wrapper_f9f2ca:not(.groupStart_d5deea):before,
+.theme-light .messageListItem_d5deea:hover + .messageListItem_d5deea .wrapper_f9f2ca:not(.groupStart_d5deea):after {
   background: var(--bg-overlay-4, var(--background-secondary));
   border: none;
 }
-.theme-dark .mentioned_d5deea .messageContent_ec86aa,
-.theme-light .mentioned_d5deea .messageContent_ec86aa {
+.theme-dark .mentioned_d5deea .messageContent_f9f2ca,
+.theme-light .mentioned_d5deea .messageContent_f9f2ca {
   background: var(--bg-overlay-5, var(--background-primary));
 }
 .theme-dark .wrapper_a7c28c,
 .theme-light .wrapper_a7c28c {
   color: var(--text-normal);
 }
-.theme-dark .markup_d6076c a span,
-.theme-light .markup_d6076c a span {
+.theme-dark .markup_f8f345 a span,
+.theme-light .markup_f8f345 a span {
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent;
   background: var(--bg-overlay-6, var(--background-primary));
 }
-.theme-dark .embed_ad0b71.embedFull_ad0b71,
-.theme-light .embed_ad0b71.embedFull_ad0b71 {
+.theme-dark .embed_b0068a.embedFull_b0068a,
+.theme-light .embed_b0068a.embedFull_b0068a {
   background: var(--bg-overlay-2, var(--background-secondary));
 }
-.theme-dark .wrapper_b9fe76,
-.theme-light .wrapper_b9fe76 {
+.theme-dark .wrapper_a71a1c,
+.theme-light .wrapper_a71a1c {
   background: var(--bg-overlay-2, var(--background-secondary));
 }
-.theme-dark .wrapper_ef319f,
-.theme-light .wrapper_ef319f {
+.theme-dark .wrapper_f7e168,
+.theme-light .wrapper_f7e168 {
   background: var(--bg-overlay-5, var(--background-secondary));
 }
-.theme-dark .wrapper_ef319f .button_ef319f,
-.theme-light .wrapper_ef319f .button_ef319f {
+.theme-dark .wrapper_f7e168 .button_f7e168,
+.theme-light .wrapper_f7e168 .button_f7e168 {
   color: var(--interactive-active);
 }
 .theme-dark .members_cbd271, .theme-dark .members_cbd271 > div,
