--- a/nitroaddon.css
+++ b/nitroaddon.css
@@ -366,8 +366,8 @@
 .theme-light .select__3f413.lookFilled__3f413 {
   background: var(--bg-overlay-1);
 }
-.theme-dark .popout__3f413,
-.theme-light .popout__3f413 {
+.theme-dark .popout_af3b89,
+.theme-light .popout_af3b89 {
   background: var(--bg-overlay-1);
 }
 
